# local-coding-assistant

./: Modelfile  README.md  callbacks.py  create_dataset.py  dataset.py  fine-tune.ipynb  fine-tune.py  fine_tune.py  pyproject.toml  setup.sh
archive/: dataset.py  setup.sh
